# pygrep

./: .gitignore  .pre-commit-config.yaml  flake.nix  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: pygrep.py
src/pygrep/: grepper.py
tests/: test_logic.py  test_placeholder.py
